# Physical-AI-Humanoid-Robotics-Book

./: .gitignore  GEMINI.md  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
.gemini/: settings.json
.specify/memory/: constitution.md
auth-server/: README.md  package-lock.json  package.json  tsconfig.json  vercel.json
auth-server/api/: index.ts
auth-server/src/: auth.ts  index.ts
backend/: agent.py  api.py  conversations.db  conversations.db-shm  conversations.db-wal  main.py  pyproject.toml  reset_collection.py  retrieve.py
docs/: hardware-requirements.md  intro.md  weekly-breakdown.md
docs/module-01-nervous-system/: 01-overview.md  02-ros2-nodes-topics-services.md  02-system-intuition.md  03-python-agents-rclpy.md  03-theory-fundamentals.md  04-architecture.md  04-urdf-humanoids.md  05-algorithms.md  06-practical-applications.md  07-review.md  08-mini-project.md  09-pitfalls.md  _category_.json
docs/module-02-digital-twin/: 01-course-introduction.md  02-physics-simulation-gazebo.md  03-high-fidelity-rendering-unity.md  04-simulating-sensors.md  _category_.json  mermaid-style-guide.md
docs/module-03-ai-brain/: 01-course-introduction.md  01-overview.md  02-nvidia-isaac-sim.md  03-isaac-ros.md  04-nav2.md  _category_.json
docs/module-04-vla/: 01-course-introduction.md  01-overview.md  02-voice-to-action.md  03-cognitive-planning.md  04-capstone-project.md  _category_.json
specs/001-create-api-endpoints/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modules-ai-vla/: data-model.md  plan.md  (+4 more)
(+311 files in other folders)
